--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Barlow";
-  src: url("../fonts/Poppins-Regular.ttf");
+  font-family: "open";
+  src: url("../fonts/Poppins-Black.ttf");
   font-weight: 100;
   font-style: normal;
 }
