--- a/src/styles/portApp.css
+++ b/src/styles/portApp.css
@@ -4,6 +4,7 @@
   left: 0;
   top: 0;
   font-family: "Barlow", sans-serif;
+  background-image: linear-gradient(to bottom,#74D8FF, white);
 }
 
 .NavContainer {
@@ -15,16 +16,16 @@
 }
 .NavDesign {
   background-color: #032b44;
-  width: 150px;
+  width: 250px;
   height: 100%;
-  right: -150px;
+  right: -250px;
   position: fixed;
   padding: 0;
   transition: transform 0.3s ease-in-out;
 }
 
 .NavDesign.open {
-  transform: translateX(-150px);
+  transform: translateX(-250px);
 }
 
 .NavDesign.close {
@@ -39,6 +40,7 @@
 
 .NavDesign li {
   text-align: center;
+  margin-top:2em
 }
 
 .NavDesign a {
@@ -47,7 +49,7 @@
   color: white;
   padding: 10px 0 10px 0;
   width: 100%;
-  margin-top: 6px;
+  margin-top: 5px;
 }
 
 .NavDesign a:hover {
@@ -57,10 +59,9 @@
 
 .headDiv {
   background-color: #032b44;
-  height: 50px;
   color: white;
   position: relative;
-  padding: 10px 0 0 20px;
+  padding: 20px 10px 0px ;
   z-index: 1000;
   margin: 0;
 }
@@ -68,8 +69,8 @@
   position: absolute;
   right: 0;
   z-index: 2000;
-  top: 10px;
-  font-size: 20px;
+  top: 20px;
+  font-size: 25px;
   background-color: transparent;
   color: white;
   border: none;
@@ -77,6 +78,19 @@
 .headDiv > .LinkContainer > a {
   color: white;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 25px;
   margin-right: 20px;
+  margin-bottom:0;
+  padding: 0px;
+}
+@media screen and (max-width: 768px) {
+  .NavDesign {
+    width: 500px;
+    right: -500px;
+  }
+
+  .NavDesign.open {
+    transform: translateX(-500px);
+  }
+
 }
