--- a/src/styles/portApp.css
+++ b/src/styles/portApp.css
@@ -38,7 +38,6 @@
 }
 
 .NavDesign li {
-  text-align: center;
   margin-top:2em
 }
 
@@ -85,9 +84,8 @@
 }
 @media screen and (max-width: 768px) {
   .NavDesign {
-    width: 768px;
+    width: 500px;
     right: -768px;
-    text-align: center;
   }
 
   .NavDesign.open {
@@ -95,7 +93,7 @@
   }
 
   .NavDesign a {
-    text-align: center;
+   width: 550px
   }
   
 
