--- a/src/styles/portApp.css
+++ b/src/styles/portApp.css
@@ -4,6 +4,8 @@
   left: 0;
   top: 0;
   font-family: "Barlow", sans-serif;
+  background-color:#DEF3FF;
+  
 }
 
 .NavContainer {
@@ -84,7 +86,7 @@
 }
 @media screen and (max-width: 768px) {
   .NavDesign {
-    width: 500px;
+    width: 100%;
     right: -768px;
   }
 
@@ -92,9 +94,6 @@
     transform: translateX(-768px);
   }
 
-  .NavDesign a {
-   width: 550px
-  }
   
 
 }
