--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,6 @@
 .first-header {
   text-align: center;
-  background-color: #74D8FF;
+  background-color: rgba(224, 217, 217, 0.207);
   padding: 20px 10px;
 }
 
@@ -21,11 +21,13 @@
 }
 
 .gridContainer > div {
-  background-color: #74D8FF;
+  background-color: rgba(224, 217, 217, 0.207);
+  border:2px solid #74D8FF;
   padding: 10px 20px;
   text-align: center;
   transition: transform 0.3s ease-in-out;
   line-height: 2;
+  border-radius: 5px;
 }
 
 .gridContainer > div:hover {
@@ -58,9 +60,10 @@
 }
 
 .library {
-  background-color: #74D8FF;
+  background-color: rgba(224, 217, 217, 0.207);
   padding: 10px 15px 50px;
   text-align: center;
+  border:2px solid #74D8FF ;
 }
 .library > h2 {
   color: #032b44;
